<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:text="@string/select_which_to_sync"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >

            <RadioButton
                android:id="@+id/dropbox"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="22dip"
                android:layout_marginTop="22dip"
                android:checked="true"
                android:drawableLeft="@drawable/dropbox"
                android:text="@string/dropbox" />

            <RadioButton
                android:id="@+id/google_drive"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="22dip"
                android:layout_marginTop="22dip"
                android:drawableLeft="@drawable/google_drive"
                android:text="@string/google_drive" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="22dip"
                android:layout_marginTop="22dip"
                android:drawableLeft="@drawable/other"
                android:text="@string/other" />
        </RadioGroup>

        <Button
            android:id="@+id/setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/setting" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.48"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/sync_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_now" />
    </LinearLayout>

</LinearLayout>